--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
-    "build": "tsc",
-    "start": "tsc && node dist/server.js",
+    "build": "npx tsc",
+    "start": "npx tsc && node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts"
   },
   "repository": {
