--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "build": "npx tsc",
-    "start": "npx tsc && node dist/server.js",
+    "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts"
   },
   "repository": {
