--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.9",
     "@types/passport": "^1.0.12",
+    "@types/passport-facebook": "^3.0.0",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.9",
     "nodemon": "^3.0.1",
@@ -53,6 +54,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "zod": "^3.22.1"
